to use minio sdk in vite

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="/js/minio.js" async defer></script>
     <script>
       window.global = window;
     </script>
