--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="/js/minio.min.js"></script>
+    <!-- <script src="/js/minio.js"></script> -->
     <script>
       window.global = window;
+      window.process = {
+        env:{}
+      }
     </script>
   </body>
 </html>
